--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        kotlin_version = '1.9.0-Beta'
+    }
+    dependencies {
+        classpath 'com.facebook.testing.screenshot:plugin:0.14.0'
+        //classpath 'app.cash.paparazzi:paparazzi-gradle-plugin:1.3.0'
+    }
+}
+
 plugins {
     id 'com.android.application' version '8.0.1' apply false
     id 'com.android.library' version '8.0.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    //id 'app.cash.paparazzi' version '1.3.0'
 }
